align fixed tabs

--- a/Tabs/style.css
+++ b/Tabs/style.css
@@ -7,6 +7,7 @@
 
 li{
     list-style-type: none;
+    padding: 10px
 }
 
 a {
@@ -28,13 +29,17 @@ a.active {
     gap: 1rem;
     margin-left: 10rem;
 
+    /* margin-top: 10rem; */
+
 }
 
 .tabs {
 
     width: 30rem;
     height: 3rem;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .tab {
@@ -44,3 +49,22 @@ a.active {
     
 }
 
+.top_icon{
+
+    position: absolute;
+    top: 121px;
+    left: 245px;
+}
+
+.top_icon2 {
+    position: absolute;
+    top: 121px;
+    left: 398px;
+}
+
+.top_icon3 {
+
+    position: absolute;
+    top: 121px;
+    left: 525px;
+}
